Fix links alignment inside payment methods box

--- a/css/compat/themes/compat-striz-rtl-161-beta-5.css
+++ b/css/compat/themes/compat-striz-rtl-161-beta-5.css
@@ -3,3 +3,7 @@ body.theme-striz .fc-wrapper #payment .payment_methods > li.wc_payment_method > 
   width: 24px;
   height: 24px;
 }
+
+body.theme-striz .fc-wrapper #payment ul.payment_methods > li.wc_payment_method .payment_box a {
+  float: none;
+}
