--- a/sass/compat/themes/striz/_checkout-payment-methods.scss
+++ b/sass/compat/themes/striz/_checkout-payment-methods.scss
@@ -7,3 +7,10 @@ body#{ $_body-theme-selector } .fc-wrapper #payment .payment_methods > li.wc_pay
 	width: $payment-method-radio-size;
 	height: $payment-method-radio-size;
 }
+
+
+
+// #payment .payment_methods li a
+body#{ $_body-theme-selector } .fc-wrapper #payment ul.payment_methods > li.wc_payment_method .payment_box a {
+	float: none;
+}
